Changelog 1.0.0-1.20.1:

- Added Leather Shield
- Added Gold Shield
- Added Diamond Shield
- Added Netherite Shield

Changelog 1.0.0-1.20.2:

- Ported to 1.20.2

Changelog 1.0.1-1.20.2:

- Changed Icon of Creative Mode Tab
- Added Amethyst Shield
- Added Emerald Shield
- Added End Crystal Shield
- Added Obsidian Shield
- Fixed de_de language

Changelog 1.0.2-1.20.2:

- Updated to forge - 48.1.0
- Changed mappings to parchment-1.20.2

Changelog 1.0.0-1.20.3:

- Ported to 1.20.3