@@ -48,7 +48,7 @@ mod_name=More Vanilla Shields
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT License
 # The mod version. See https://semver.org/
-mod_version=1.0.0-1.20.3
+mod_version=1.0.1-1.20.3
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -56,4 +56,4 @@ mod_group_id=com.rajhab.morevanillashields_mod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Rajhab
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Tired of having just the normal vanilla Iron Shield? \n\nThere you go! \n\nA simple mod that allows you to craft more than just the vanilla Iron Shield! \n\n 1.0.0-1.20.3-49.0.2
+mod_description=Tired of having just the normal vanilla Iron Shield? \n\nThere you go! \n\nA simple mod that allows you to craft more than just the vanilla Iron Shield! \n\n 1.0.1-1.20.3-49.0.2
