@@ -42,5 +42,9 @@ public class ModItemProperties {
         ItemProperties.register(ModItems.OBSIDIAN_SHIELD.get(), new ResourceLocation("morevanillashields:blocking"), (p_174575_, p_174576_, p_174577_, p_174578_) -> {
             return p_174577_ != null && p_174577_.isUsingItem() && p_174577_.getUseItem() == p_174575_ ? 1.0F : 0.0F;
         });
+
+        ItemProperties.register(ModItems.COAL_SHIELD.get(), new ResourceLocation("morevanillashields:blocking"), (p_174575_, p_174576_, p_174577_, p_174578_) -> {
+            return p_174577_ != null && p_174577_.isUsingItem() && p_174577_.getUseItem() == p_174575_ ? 1.0F : 0.0F;
+        });
     }
 }
