@@ -8,5 +8,18 @@
   "item.morevanillashields.emerald_shield": "Smaragd Schild",
   "item.morevanillashields.amethyst_shield": "Amethyst Schild",
   "item.morevanillashields.end_crystal_shield": "End Kristal Schild",
-  "item.morevanillashields.obsidian_shield": "Obsidian Schild"
+  "item.morevanillashields.obsidian_shield": "Obsidian Schild",
+  "item.morevanillashields.coal_shield": "Kohle Schild",
+
+
+  "item.moditems.shift": "Drücke \"SHIFT\" für mehr Infos",
+  "item.moditems.leather_shield": "Leder Schild. Stabilität ist 216",
+  "item.moditems.gold_shield": "Gold Schild. Stabilität ist 356",
+  "item.moditems.diamond_shield": "Diamant Schild. Stabilität ist 512",
+  "item.moditems.netherite_shield": "Netherit Schild. Stabilität ist 2042",
+  "item.moditems.emerald_shield": "Smaragd Schild. Stabilität ist 512",
+  "item.moditems.amethyst_shield": "Amethyst Schild. Stabilität ist 432",
+  "item.moditems.end_crystal_shield": "End Kristal Schild. Stabilität ist 750",
+  "item.moditems.obsidian_shield": "Obsidian Schild. Stabilität ist 610",
+  "item.moditems.coal_shield": "Kohle Schild. Stabilität ist 268"
 }
