@@ -1,0 +1,54 @@
+{
+	"parent": "morevanillashields:item/coal_shield_base",
+	"gui_light": "front",
+	"texture_size": [64, 64],
+	"textures": {
+		"0": "morevanillashields:item/coal_shield",
+		"particle": "morevanillashields:item/coal_shield"
+	},
+	"display": {
+		"thirdperson_righthand": {
+			"rotation": [ 0, 90, 0 ],
+			"translation": [ 10, 6, -4 ],
+			"scale": [ 1, 1, 1 ]
+		},
+		"thirdperson_lefthand": {
+			"rotation": [ 0, 90, 0 ],
+			"translation": [ 10, 6, 12 ],
+			"scale": [ 1, 1, 1 ]
+		},
+		"firstperson_righthand": {
+			"rotation": [ 0, 180, 5 ],
+			"translation": [ -10, 2, -10 ],
+			"scale": [ 1.25, 1.25, 1.25 ]
+		},
+		"firstperson_lefthand": {
+			"rotation": [ 0, 180, 5 ],
+			"translation": [ 10, 0, -10 ],
+			"scale": [ 1.25, 1.25, 1.25 ]
+		},
+		"gui": {
+			"rotation": [ 15, -25, -5 ],
+			"translation": [ 2, 3, 0 ],
+			"scale": [ 0.65, 0.65, 0.65 ]
+		},
+		"fixed": {
+			"rotation": [ 0, 180, 0 ],
+			"translation": [ -4.5, 4.5, -5],
+			"scale":[ 0.55, 0.55, 0.55]
+		},
+		"ground": {
+			"rotation": [ 0, 0, 0 ],
+			"translation": [ 2, 4, 2],
+			"scale":[ 0.25, 0.25, 0.25]
+		}
+	},
+	"overrides": [
+		{
+			"predicate": {
+				"morevanillashields:blocking": 1
+			},
+			"model": "morevanillashields:item/coal_shield_blocking"
+		}
+	]
+}
