@@ -1,0 +1,49 @@
+{
+  "type": "minecraft:crafting_shaped",
+  "pattern": [
+    "wcw",
+    "www",
+    " w "
+  ],
+  "key": {
+    "w": [
+      {
+        "item": "minecraft:warped_planks"
+      },
+      {
+        "item": "minecraft:crimson_planks"
+      },
+      {
+        "item": "minecraft:cherry_planks"
+      },
+      {
+        "item": "minecraft:mangrove_planks"
+      },
+      {
+        "item": "minecraft:dark_oak_planks"
+      },
+      {
+        "item": "minecraft:acacia_planks"
+      },
+      {
+        "item": "minecraft:jungle_planks"
+      },
+      {
+        "item": "minecraft:birch_planks"
+      },
+      {
+        "item": "minecraft:spruce_planks"
+      },
+      {
+        "item": "minecraft:oak_planks"
+      }
+    ],
+    "c": {
+      "item": "minecraft:coal"
+    }
+  },
+  "result": {
+    "item": "morevanillashields:coal_shield",
+    "count": 1
+  }
+}
