@@ -26,3 +26,9 @@ Changelog 1.0.2-1.20.2:
 Changelog 1.0.0-1.20.3:
 
 - Ported to 1.20.3
+
+Changelog 1.0.1-1.20.3:
+
+- Added Coal Shield (smeltable)
+- Simplified code of End Crystal Shield
+- Added Tool Tips for Shields
